<resources>
    <string name="app_name">WalkInThePark</string>

    <!-- Basically this page stores all the naming.
    Even if it's static please please keep it here-->
    <string name="fragment_leaderboard">Leaderboard</string>
    <string name="fragment_routes">Routes</string>
    <string name="fragment_account_settings">Account</string>

    <string name="app_bottom_bar_leaderboard">Leaderboard</string>
    <string name="app_bottom_bar_route">Routes</string>
    <string name="app_bottom_bar_group">Group</string>
    <string name="app_bottom_bar_account">Account</string>

    <string name="app_bottom_button">Back to main menu</string>

    <string name="complete_route_total_time">Total\ntime elapsed</string>
    <string name="complete_route_points">Total\nPoints</string>
    <string name="route_completed_hrs">Hrs</string>
    <string name="route_completed_mins">Mins</string>
    <string name="route_completed_secs">Secs</string>

    <string name="toast_permission_granted">Permission granted, please try again</string>
    <string name="toast_permission_denied">WalkInThePark requires permission to continue!</string>
    <string name="toast_denied_checkpoints">Please complete current checkpoint to unlock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
